--- a/app/src/main/res/layout/slider_image_item.xml
+++ b/app/src/main/res/layout/slider_image_item.xml
@@ -1,79 +1,100 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/bg_patterns2x"
-    android:orientation="vertical"
-   >
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/slider"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/transprent_background"
-        >
-
-    </ImageView>
-    <TextView
-        android:id="@+id/txt_header"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="@string/txt_header"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="15sp"
-        android:fontFamily="@font/avenir_black"
-        android:textColor="@android:color/black"
-        android:layout_below="@+id/slider"
-        />
-    <TextView
-        android:id="@+id/txt_des"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:fontFamily="@font/avenir_light"
-        android:text="@string/dummy_text"
-        android:textColor="@android:color/black"
-        android:layout_below="@+id/txt_header"
-        />
+        android:layout_height="match_parent"
+        android:background="@drawable/bg_patterns2x">
 
-    <RelativeLayout
-        android:id="@+id/relative_bottom"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:gravity="center"
-        android:layout_below="@+id/txt_des"
-        android:layout_marginTop="10dp"
-        android:padding="10dp">
-
-        <Button
-            android:id="@+id/btn_skip"
-            android:layout_width="wrap_content"
+        <ImageView
+            android:id="@+id/slider"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:background="@android:color/transparent"
-            android:text="Skip"
+            android:background="@drawable/transprent_background"
+            app:layout_constraintBottom_toTopOf="@+id/txt_header"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/txt_header"
+            app:layout_constraintTop_toTopOf="parent"></ImageView>
+
+        <TextView
+            android:id="@+id/txt_header"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:fontFamily="@font/avenir_black"
-            android:textAllCaps="false"
-            android:textColor="@android:color/black" />
-
-        <Button
-            android:id="@+id/btn_next"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/button_background_next"
-            android:text="Next"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="@string/txt_header"
+            android:textColor="@android:color/black"
             android:textSize="15sp"
-            android:fontFamily="@font/avenir_black"
-            android:textAllCaps="false"
-            android:textColor="@android:color/white" />
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/txt_des"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/txt_des"
+            app:layout_constraintTop_toBottomOf="@+id/slider" />
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/txt_des"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/avenir_light"
+            android:padding="10dp"
+            android:text="@string/dummy_text"
+            android:textColor="@android:color/black"
+            app:layout_constraintBottom_toTopOf="@+id/indicator"
+            app:layout_constraintEnd_toEndOf="@+id/indicator"
+            app:layout_constraintStart_toStartOf="@+id/indicator"
+            app:layout_constraintTop_toBottomOf="@+id/txt_header" />
+
+        <com.viewpagerindicator.CirclePageIndicator
+            android:id="@+id/indicator"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/txt_des"
+            app:layout_constraintBottom_toTopOf="@+id/relative_bottom"
+            app:layout_constraintStart_toStartOf="@+id/relative_bottom"
+            app:layout_constraintTop_toBottomOf="@+id/txt_des" />
+
+        <RelativeLayout
+            android:id="@+id/relative_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:gravity="center"
+            android:padding="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/indicator">
+
+            <Button
+                android:id="@+id/btn_skip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:background="@android:color/transparent"
+                android:fontFamily="@font/avenir_black"
+                android:text="Skip"
+                android:textAllCaps="false"
+                android:textColor="@android:color/black" />
+
+            <Button
+                android:id="@+id/btn_next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/button_background_next"
+                android:fontFamily="@font/avenir_black"
+                android:text="Next"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:textSize="15sp" />
+
+        </RelativeLayout>
 
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </RelativeLayout>
