--- a/app/src/main/res/layout/fragment_chosse_security.xml
+++ b/app/src/main/res/layout/fragment_chosse_security.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
     tools:context=".fragment.ChosseSecurityFragment">
 
 
@@ -11,16 +12,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Skip"
+        android:textColor="@android:color/black"
         android:layout_marginTop="20dp"
         android:layout_alignParentRight="true"
         android:fontFamily="@font/avenir_black"
         android:padding="5dp"/>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bg_patterns2x"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
@@ -75,18 +78,21 @@
 
             </LinearLayout>
 
-            <Button
-                android:id="@+id/btn_continue"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="@drawable/button_background_next"
-                android:text="Proceed"
-                android:fontFamily="@font/avenir_black"
-                android:textColor="@android:color/white"
-                android:layout_marginTop="20dp"
-                android:layout_margin="20dp"
-                android:textAllCaps="false"/>
+
         </LinearLayout>
-    </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_continue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/button_background_next"
+            android:text="Proceed"
+            android:fontFamily="@font/avenir_black"
+            android:textColor="@android:color/white"
+            android:layout_marginTop="20dp"
+            android:layout_margin="20dp"
+            android:layout_alignParentBottom="true"
+            android:textAllCaps="false"/>
+    </RelativeLayout>
 </RelativeLayout>
