--- a/app/src/main/res/layout/fragment_otp_verification.xml
+++ b/app/src/main/res/layout/fragment_otp_verification.xml
@@ -5,12 +5,14 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/white"
+    android:clickable="true"
     tools:context=".fragment.OtpVerificationFragment">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/bg_patterns2x"
+        android:layout_marginBottom="50dp"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
@@ -103,47 +105,51 @@
 </RelativeLayout>
 
 
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:background="@drawable/button_background_next"
-                android:text="Continue"
-                android:fontFamily="@font/avenir_black"
-                android:textColor="@android:color/white"
-                android:layout_marginTop="20dp"
-                android:layout_margin="20dp"
-                android:textAllCaps="false"/>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center_horizontal"
-                android:layout_marginTop="30dp"
-                android:orientation="horizontal">
 
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="12sp"
-                    android:text="Resend"
-                    android:textColor="@android:color/darker_gray"
-                    android:fontFamily="@font/avenir_light"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="12sp"
-                    android:text="00:50"
-                    android:layout_alignParentRight="true"
-                    android:textColor="@android:color/black"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/avenir_black"/>
-            </LinearLayout>
 
         </LinearLayout>
+        <Button
+            android:id="@+id/btn_otp_con"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/button_background_next"
+            android:text="Continue"
+            android:fontFamily="@font/avenir_black"
+            android:textColor="@android:color/white"
+            android:layout_marginTop="20dp"
+            android:layout_above="@+id/bottom_linear"
+            android:layout_margin="20dp"
+            android:textAllCaps="false"/>
+        <LinearLayout
+            android:id="@+id/bottom_linear"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
 
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:text="Resend"
+                android:textColor="@android:color/darker_gray"
+                android:fontFamily="@font/avenir_light"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:text="00:50"
+                android:layout_alignParentRight="true"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:fontFamily="@font/avenir_black"/>
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </RelativeLayout>
