--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -3,12 +3,14 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/white"
+    android:clickable="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_patterns2x"
+        android:layout_marginBottom="30dp"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
@@ -126,7 +128,7 @@
 
         </LinearLayout>
         <Button
-            android:id="@+id/btn_continue"
+            android:id="@+id/btn_submit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -134,10 +136,10 @@
             android:text="Submit"
             android:fontFamily="@font/avenir_black"
             android:textColor="@android:color/white"
-            android:layout_marginTop="20dp"
+            android:layout_alignParentBottom="true"
             android:layout_margin="20dp"
             android:textAllCaps="false"/>
-    </LinearLayout>
+    </RelativeLayout>
 
 
 
