--- a/app/src/main/res/layout/activity_profile_creation_passenger.xml
+++ b/app/src/main/res/layout/activity_profile_creation_passenger.xml
@@ -7,7 +7,8 @@
     android:orientation="vertical"
     android:background="@android:color/white"
     tools:context=".fragment.ProfileCreationPassengerFragment">
-<LinearLayout
+
+    <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_patterns2x"
@@ -749,29 +750,60 @@
                 </LinearLayout>
 
                 <RelativeLayout
-                    android:id="@+id/linear_two"
+                    android:id="@+id/rlCard"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/edit_text_border_left"
                     android:orientation="vertical">
-<View
-    android:id="@+id/view_relative"
-    android:layout_width="match_parent"
-    android:layout_centerVertical="true"
-    android:layout_height="44dp" />
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/txt_card_expire"
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tvCard"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginLeft="5dp"
+                        android:text="Card Expiry Date"
+                        android:paddingBottom="0dp"
+                        android:textStyle="bold"
+                        android:textColor="@color/grey"
+                        android:textSize="12sp" />
+
+                    <androidx.appcompat.widget.AppCompatEditText
+                        android:id="@+id/etCardDate"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tvCard"
+                        android:layout_marginLeft="4dp"
+                        android:layout_marginStart="4dp"
+                        android:paddingTop="0dp"
+                        android:background="@null"
+                        android:editable="false"
+                        android:focusableInTouchMode="false"
+                        android:fontFamily="@font/avenir_black"
+                        android:paddingBottom="5dp"
+                        android:singleLine="true"
+                        android:textColor="@color/black"
+                        android:textSize="12sp"
+                        android:translationY="5dp"
+                        android:visibility="gone" />
+
+                    <!--<View
+                        android:id="@+id/view_relative"
+                        android:layout_width="match_parent"
+                        android:layout_centerVertical="true"
+                        android:layout_height="44dp" />-->
+
+                    <!--<com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         app:hintTextAppearance="@style/TextInputLayoutHintText"
                         android:textColorHint="@color/grey"
-                        android:clickable="false"
                         android:hint="Card Expiry Date"
                         app:hintTextColor="@android:color/darker_gray"
                         android:layout_marginLeft="5dp">
 
                         <androidx.appcompat.widget.AppCompatEditText
-                            android:id="@+id/edt_card_date"
+                            android:id="@+id/etCardDate"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/avenir_black"
@@ -781,13 +813,10 @@
                             android:paddingBottom="5dp"
                             android:focusableInTouchMode="false"
                             android:editable="false"
-                            android:clickable="false"
-                            android:focusable="false"
-                            android:inputType="none"
                             android:textSize="12sp"
                             android:singleLine="true"/>
 
-                    </com.google.android.material.textfield.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>&ndash;&gt;-->
 
 
 
