--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,32 +3,38 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/transparent</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:homeAsUpIndicator">@color/grey</item>
     </style>
+
     <style name="CustomActionBarTheme" parent="Theme.AppCompat">
         <item name="android:windowActionBarOverlay">true</item>
         <item name="windowActionBarOverlay">true</item>
         <item name="drawerArrowStyle">@color/black</item>
         <item name="android:actionBarStyle">@style/TransparentActionBar</item>
     </style>
+
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+
     <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
         <item name="color">@android:color/black</item>
     </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
     <style name="RobotoTextViewStyle" parent="android:Widget.TextView">
         <item name="android:fontFamily">@font/avenir_black</item>
         <item name="backgroundColor">@color/transparent</item>
 
     </style>
+
     <style name="TransparentActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
         <item name="android:background">@android:color/transparent</item>
     </style>
@@ -37,6 +43,7 @@
     <style name="MyApp.PopupMenu" parent="android:Widget.Holo.Light.ListPopupWindow">
         <item name="android:popupBackground">@android:color/transparent</item>
     </style>
+
     <style name="SpinnerTheme">
         <item name="android:textColor">#333333</item>
         <item name="android:fontFamily">@font/avenir_black</item>
@@ -51,6 +58,7 @@
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
 
     </style>
+
     <style name="DatePickerDialogTheme" parent="Theme.AppCompat.Light.Dialog">
         <item name="colorAccent">@color/colorPrimary</item>
     </style>
@@ -58,7 +66,8 @@
     <style name="TextInputLayoutHintText">
         <item name="android:fontFamily">@font/avenir_light</item>
         <item name="android:textColor">@color/grey</item>
-        <item name="android:textSize">12sp</item></style>
+        <item name="android:textSize">12sp</item>
+    </style>
 
     <style name="TextView.InputLabel" parent="TextAppearance.AppCompat.Caption">
         <item name="android:textColor">?android:textColorHint</item>
