--- a/app/src/main/res/layout/activity_home_screen_passenger.xml
+++ b/app/src/main/res/layout/activity_home_screen_passenger.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent">
+    android:orientation="vertical"
+    android:layout_marginTop="50dp"
+    android:layout_width="match_parent">
 
 
 <!--    <fragment-->
@@ -38,86 +40,163 @@
 
 
     <LinearLayout
-        android:id="@+id/linear_layout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="visible"
-        android:layout_marginLeft="-2dp"
-        android:layout_marginRight="0dp"
         android:background="@drawable/otp_background"
-        android:layout_alignParentBottom="true"
         android:orientation="vertical">
+
         <View
             android:layout_width="50dp"
             android:layout_height="4dp"
-            android:layout_marginTop="5dp"
             android:background="@color/black"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"/>
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/shap_rec_bg"
-    android:layout_marginTop="20dp"
-    android:padding="5dp"
-    android:layout_marginRight="3dp"
-    android:layout_marginLeft="3dp"
-    android:gravity="center"
-    android:orientation="horizontal">
-
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Where to?"
-    android:textStyle="bold"
-    android:layout_weight="1"
-    android:padding="5dp"
-    android:textColor="@color/black"
-    android:fontFamily="@font/avenir_black"/>
-
-    <LinearLayout
-        android:id="@+id/linear_now"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:padding="5dp"
-        android:gravity="center"
-        android:background="@drawable/rec_white_bg"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/clock_file"
-            android:layout_gravity="center"/>
-        <TextView
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Now"
-            android:textStyle="bold"
-            android:layout_weight="1"
-            android:paddingRight="5dp"
-            android:paddingLeft="5dp"
-            android:fontFamily="@font/avenir_black"/>
+            android:layout_marginTop="20dp"
+            android:padding="5dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/shap_rec_bg"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/drop_down"
-            android:layout_gravity="center"/>
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Where to?"
+                android:fontFamily="@font/avenir_black"
+                android:textStyle="bold"
+                android:padding="5dp"
+                android:textSize="12sp"
+                android:layout_alignParentLeft="true"
+               android:layout_centerInParent="true"
+                android:textColor="@color/black"/>
 
 
+            <LinearLayout
+                android:id="@+id/linear_now"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:padding="5dp"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/rec_white_bg"
+                android:orientation="horizontal">
 
-</LinearLayout>
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/clock_file"
+                    android:layout_gravity="center"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Now"
+                    android:textStyle="bold"
+                    android:layout_weight="1"
+                    android:paddingRight="5dp"
+                    android:paddingLeft="5dp"
+                    android:fontFamily="@font/avenir_black"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/drop_down"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
+
+        </RelativeLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/home_recycler"
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:padding="10dp"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"/>
+
     </LinearLayout>
+
+<!--    <LinearLayout-->
+<!--        android:id="@+id/linear_layout1"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:visibility="visible"-->
+<!--        android:layout_marginLeft="-2dp"-->
+<!--        android:layout_marginRight="0dp"-->
+<!--        android:background="@drawable/otp_background"-->
+<!--        android:orientation="vertical">-->
+<!--        <View-->
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="4dp"-->
+<!--            android:layout_marginTop="5dp"-->
+<!--            android:background="@color/black"-->
+<!--            android:layout_gravity="center"/>-->
+
+<!--<LinearLayout-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:background="@drawable/shap_rec_bg"-->
+<!--    android:layout_marginTop="20dp"-->
+<!--    android:padding="5dp"-->
+<!--    android:layout_marginRight="3dp"-->
+<!--    android:layout_marginLeft="3dp"-->
+<!--    android:gravity="center"-->
+<!--    android:orientation="horizontal">-->
+
+<!--<TextView-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:text="Where to?"-->
+<!--    android:textStyle="bold"-->
+<!--    android:layout_weight="1"-->
+<!--    android:padding="5dp"-->
+<!--    android:textColor="@color/black"-->
+<!--    android:fontFamily="@font/avenir_black"/>-->
+
+<!--    <LinearLayout-->
+<!--        android:id="@+id/linear_now"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="5dp"-->
+<!--        android:layout_marginBottom="5dp"-->
+<!--        android:padding="5dp"-->
+<!--        android:gravity="center"-->
+<!--        android:background="@drawable/rec_white_bg"-->
+<!--        android:orientation="horizontal">-->
+
+<!--        <ImageView-->
+<!--            android:layout_width="24dp"-->
+<!--            android:layout_height="24dp"-->
+<!--            android:src="@drawable/clock_file"-->
+<!--            android:layout_gravity="center"/>-->
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Now"-->
+<!--            android:textStyle="bold"-->
+<!--            android:layout_weight="1"-->
+<!--            android:paddingRight="5dp"-->
+<!--            android:paddingLeft="5dp"-->
+<!--            android:fontFamily="@font/avenir_black"/>-->
+
+<!--        <ImageView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:src="@drawable/drop_down"-->
+<!--            android:layout_gravity="center"/>-->
+<!--    </LinearLayout>-->
+
+
+
+<!--</LinearLayout>-->
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/home_recycler"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:padding="10dp"-->
+<!--            android:layout_height="wrap_content"/>-->
+<!--    </LinearLayout>-->
 <!--    <LinearLayout-->
 <!--        android:id="@+id/linear_layout2"-->
 <!--        android:layout_width="match_parent"-->
@@ -195,5 +274,5 @@
 
 <!--    </LinearLayout>-->
 
-</RelativeLayout>
+</LinearLayout>
 
