--- a/app/src/main/res/layout/app_bar_home_scree_driver.xml
+++ b/app/src/main/res/layout/app_bar_home_scree_driver.xml
@@ -8,9 +8,30 @@
     tools:context=".activity.HomeScreenNavPassengerActivity">
 
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:background="@android:color/transparent"
+        >
 
-    <include layout="@layout/content_home_scree_driver" />
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+        <ImageView
+            android:id="@+id/img_seekbar"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="-35dp"
+            android:src="@drawable/toggle_off_all"/>
+    </com.google.android.material.appbar.AppBarLayout>
 
-
+    <include
+        layout="@layout/content_home_scree_driver"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
