--- a/app/src/main/res/layout/activity_home_screen_driver.xml
+++ b/app/src/main/res/layout/activity_home_screen_driver.xml
@@ -5,61 +5,38 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     tools:openDrawer="start">
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        >
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@android:color/transparent"
-            app:popupTheme="@style/AppTheme.PopupOverlay" >
 
 
-        </androidx.appcompat.widget.Toolbar>
-        <SeekBar
-            android:id="@+id/toolbar_seekbar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:max="100"
-            android:thumbTint="@color/white"
-            android:background="@drawable/seekbar_bg"
-            android:layout_gravity="center"
-            android:layout_marginTop="-35dp"
-            android:progress="0" />
-    </com.google.android.material.appbar.AppBarLayout>
+
     <include
         layout="@layout/app_bar_home_scree_driver"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/black"
         android:layout_gravity="start"
-        >
+        android:background="@color/black"
+        android:orientation="vertical">
+
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/nav_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:fitsSystemWindows="true"
             android:background="@android:color/black"
-            app:itemTextColor="@android:color/white"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/nav_header_home_screen_nav_passenger"
             app:itemIconTint="@color/white"
             app:itemTextAppearance="@style/RobotoTextViewStyle"
-            app:headerLayout="@layout/nav_header_home_screen_nav_passenger"
+            app:itemTextColor="@android:color/white"
             app:menu="@menu/activity_home_screen_driver_drawer">
 
 
         </com.google.android.material.navigation.NavigationView>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -71,23 +48,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:gravity="center"
                 android:layout_marginBottom="20dp"
+                android:gravity="center"
                 android:orientation="horizontal">
+
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/invite_earn"/>
+                    android:src="@drawable/invite_earn" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/invite"
-                    android:textSize="12sp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="5dp"
-                    android:textStyle="bold"
                     android:fontFamily="@font/avenir_black"
-                    android:textColor="@color/white"/>
+                    android:text="@string/invite"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
