--- a/app/src/main/res/layout/fragment_choose_vehicle_type.xml
+++ b/app/src/main/res/layout/fragment_choose_vehicle_type.xml
@@ -20,7 +20,6 @@
         android:layout_height="wrap_content"
         android:background="@drawable/otp_background"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/img_back"
@@ -53,6 +52,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
         <RadioButton
@@ -62,7 +62,7 @@
             android:text="Commercial Vehicle"
             android:layout_weight="1"
             android:paddingLeft="10dp"
-            android:textSize="12sp"
+            android:textSize="15sp"
             android:fontFamily="@font/avenir_black"
             android:button="@drawable/radio_selector"
             android:checked="true" />
@@ -237,9 +237,10 @@
             android:layout_marginTop="15dp"
             android:textColor="@android:color/black"/>
         <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@drawable/bmw_header"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:src="@drawable/upload_images3x"
+            android:layout_marginTop="10dp"
             android:layout_weight="1">
         </ImageView>
 
@@ -265,18 +266,13 @@
             android:weightSum="2"
             android:orientation="horizontal">
         <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@drawable/bmw_header"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:src="@drawable/upload_images3x"
+            android:layout_marginTop="10dp"
             android:layout_weight=".5">
         </ImageView>
 
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:src="@drawable/bmw_header"
-                android:layout_weight=".5">
-            </ImageView>
         </LinearLayout>
     </LinearLayout>
 
@@ -285,7 +281,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:text="Continue"
         android:fontFamily="@font/avenir_black"
         android:textAllCaps="false"
