--- a/app/src/main/res/menu/activity_home_screen_driver_drawer.xml
+++ b/app/src/main/res/menu/activity_home_screen_driver_drawer.xml
@@ -20,7 +20,7 @@
 
         <item
             android:id="@+id/nav_account"
-            android:icon="@drawable/my_account"
+            android:icon="@drawable/my_earnings3x"
             android:title="@string/menu_earning" />
         <item
             android:id="@+id/nav_acct"
