--- a/app/src/main/res/layout/activity_profile_creation_driver.xml
+++ b/app/src/main/res/layout/activity_profile_creation_driver.xml
@@ -505,7 +505,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/edit_text_border_right"
                     android:orientation="vertical">
 
                 <LinearLayout
@@ -537,7 +536,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Add More Vehicle"
+                        android:text="Add Vehicle"
                         android:fontFamily="@font/avenir_black"
                         android:textSize="15sp"
                         android:textStyle="bold"
@@ -557,6 +556,7 @@
                     android:textColor="@android:color/black"/>
 
                 <RadioGroup
+                    android:id="@+id/rg_type_per"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
@@ -565,7 +565,6 @@
                     <RadioButton
                         android:id="@+id/radio_nopermission"
                         android:text="I dont need any permission"
-                        android:checked="true"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -577,7 +576,6 @@
                     <RadioButton
                         android:id="@+id/radio_havepermission"
                         android:text="I have permission from govt"
-                        android:checked="true"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -590,7 +588,6 @@
                     <RadioButton
                         android:id="@+id/radio_want_tobe_emp"
                         android:text="I want to be an employee and drive under company permission"
-                        android:checked="true"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -704,6 +701,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/txt_beEmployee"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="I want to be an employee and driver under company permission"
@@ -712,6 +710,7 @@
                         android:textStyle="bold"
                         android:layout_marginTop="15dp"
                         android:drawablePadding="10dp"
+                        android:visibility="gone"
                         android:drawableLeft="@drawable/tick"
                         android:textColor="@color/grey"/>
 
