--- a/app/src/main/res/layout/app_bar_home_scree_driver.xml
+++ b/app/src/main/res/layout/app_bar_home_scree_driver.xml
@@ -19,18 +19,27 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:popupTheme="@style/AppTheme.PopupOverlay"/>
-        <ImageView
-            android:id="@+id/img_seekbar"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="-35dp"
-            android:src="@drawable/toggle_off_all"/>
+            app:navigationIcon="@drawable/menu"
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+
+
+
+            <ImageView
+                android:id="@+id/img_seekbar"
+                android:layout_width="50dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:clickable="true"
+                android:focusable="true"
+                android:src="@drawable/toggle_off_all"/>
+
+        </androidx.appcompat.widget.Toolbar>
+
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <include
-        layout="@layout/content_home_scree_driver"
+        layout="@layout/fragment_home_screen_driver"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
