--- a/app/src/main/res/layout/fragment_home_screen_driver.xml
+++ b/app/src/main/res/layout/fragment_home_screen_driver.xml
@@ -24,16 +24,22 @@
             android:src="@drawable/map"
             tools:ignore="ContentDescription" />
 
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentRight="true"
+        <TextView
+            android:id="@+id/txt_active_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:layout_alignParentBottom="true"
             android:layout_marginTop="-30dp"
             android:layout_marginRight="20dp"
+            android:text="You are Offline"
+            android:padding="8dp"
+            android:fontFamily="@font/avenir_black"
+            android:textColor="@color/red"
+            android:textSize="14sp"
+            android:background="@drawable/offline_bg"
             android:layout_marginBottom="30dp"
-            android:src="@drawable/current_location2x"
-            tools:ignore="ContentDescription" />
+            />
     </RelativeLayout>
 
 
